# AI_FOREX_HFT

./: .gitignore  CHANGES.md  CLAUDE_CODE_BRIEF.md  ECN_COST_EXPERIMENT_BRIEF.md  README.md  SETUP.md  hft-forex-design.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
backtest/: cost_model.py  data_loader.py  engine.py  metrics.py  simulator.py
config/: .env.example  pair_params.yaml  risk.yaml  settings.yaml
docs/: PAPER_TRADE_GBP_NZD.md  POSTMORTEM_M5_BB_RSI.md
scripts/: analyze_time_exit.py  audit_live_spreads.py  backtest_all_pairs.py  deflated_sharpe_analysis.py  diagnose.py  download_history.py  optimize_pairs.py  recost_paper_trades.py  run_backtest.py  run_ecn_experiment.py  run_locked_params_experiment.py  run_step2.sh  run_step2_broker_experiment.sh  run_tighter_grid_autopsy.py  walk_forward_optimize.py
src/: main.py
src/api/: account.py  client.py  execution.py  stream.py  transaction_poller.py
src/core/: bus.py  events.py  models.py
src/portfolio/: tracker.py
src/risk/: filters.py  manager.py  position_sizer.py
src/strategy/: base.py  indicators.py  mean_reversion.py  momentum_scalp.py  multi_tf.py
src/utils/: config.py  helpers.py  logger.py
tests/: test_candle_builder.py  test_execution.py  test_indicators.py  test_news_filter.py  test_risk_manager.py  test_strategy.py  test_trailing_and_reduction.py
