[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hft-forex"
version = "0.1.0"
description = "High-frequency forex scalping system using OANDA practice account"
requires-python = ">=3.12"
dependencies = [
    "oandapyV20>=0.7.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "backtest*"]
